VV second commit

--- a/Natwest_Html/index.html
+++ b/Natwest_Html/index.html
@@ -4,16 +4,89 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/Natwest_Html/CSS/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Hello</title>
 </head>
 <body>
-<h1>Hello There</h1>
-<h2>Vaishali Vyas</h2>
-<h4>Paragraphs</h4>
-<p>This</p>
-<p>is</p>
-<p>a</p>
-<p>paragraph.</p>
-<p>This is some <b>text </b> and this is <b> important </b>in bold</p>
+    <header>
+<h1>Go Organic</h1>
+    </header>
+    <main>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="aboutus.html">About Us</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="fjdkas" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Dropdown
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item" href="http://www.google.com" target="_blank">Google Homepage</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                  </li>
+                </ul>
+                <form class="d-flex">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+              </div>
+            </div>
+          </nav>
+    <p id="p1">This is a main content page</p>
+    <p id="p2">food is not simply organic fuel to keep body and soul together, it is a perishable art that must be savoured at the peak of perfection.</p>
+    <br/>
+    <img src="https://media.istockphoto.com/photos/super-food-for-a-healthy-diet-picture-id1081090762?k=6&m=1081090762&s=612x612&w=0&h=xyJ4bA91G9_kBpPL_wEViovZtf1RYNVvLwsx9tVHv3k="
+    height="300"
+    width="300"
+    alt="An image of organic food"/>
+    <br/>
+    <a href="about.html" target="_blank">Product List</a>
+    <br/>
+</p>To get regular update about products sign up below with details</p>
+   
+    <form action="index.html" method="post">
+        <h1> Sign Up </h1>
+        <fieldset>
+            <legend><span class="number">1</span> <b>Your Basic Info</b></legend>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="user_name">
+            <br>
+            <br>
+            <label for="email">Email:</label>
+            <input type="email" id="mail" name="user_email">
+            <br>
+            <br>
+            <label for="password">Password:</label>
+            <input type="password" id="password"       name="user_password">
+            <br>
+            <br>
+            <label>Gender:</label>
+            <br>
+            <input type="radio" id="m_gender" value="m_gender" name="gender"><label for="m_gender">Male</label><br>
+            <input type="radio" id="f_gender" value="f_gender" name="gender"><label for="f_gender">Female</label>
+        </fieldset>
+        <br>
+        <button type="submit">Sign Up</button>
+    </form>
+</main>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
 </html>
